# grannules

./: .gitignore  .readthedocs.yaml  LICENSE  Makefile  README.md  dill_pickle.pkl  old_docs.txt  pyproject.toml  requirements.txt  test_nn.ipynb
.devcontainer/: devcontainer.json
data/: transform.json
data/default-serialized/: transform.npy
docs/: Makefile  api.rst  authors.rst  conf.py  contributing.rst  datatransform.rst  grannules.rst  history.rst  index.rst  installation.rst  make.bat  model.rst  neural_net.rst  psd.rst  requirements.txt  scalingrelations.rst  usage.ipynb  utils.rst  webapp.rst
docs/_build/doctrees/: api.doctree  authors.doctree  contributing.doctree  environment.pickle  grannules.doctree  grannules.utils.doctree  history.doctree  index.doctree  installation.doctree  modules.doctree  neural_net.doctree  preliminaries.doctree  usage.doctree  utils.doctree
docs/_build/html/: .buildinfo  api.html  authors.html  contributing.html  genindex.html  grannules.html  history.html  index.html  installation.html  modules.html  objects.inv  preliminaries.html  py-modindex.html  search.html  (+2 more)
grannules/: __init__.py  forward_model_lib.py  neural_net.py  nn2.pkl  psd_utils.py  state.pkl  test_nn.ipynb  test_serialize.py
grannules/data/: transform.pkl  trial.db
grannules/utils/: __init__.py  datatransform.py  model.py  psd.py  scalingrelations.py
src/grannules/: __init__.py  neural_net.py  nn.pkl  selimscode.py  test_nn.ipynb
src/tests/: resource_tests.py
tests/: run_tests.sh  test_notebook.py  test_serialize.py
webapp/: main.py  requirements.txt
(+21 files in other folders)
