[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "grannules"
version = "0.1.0"
dependencies = [
    "dill>=0.3.8",
    "flax>=0.8.3",
    "holoviews>=1.20.2",
    "importlib_resources>=6.4.0",
    "jax>=0.4.27",
    "lightkurve>=2.5.0",
    "numpy>=1.26.4",
    "optax>=0.2.4",
    "optuna>=3.6.1",
    "pandas>=2.2.3",
    "scikit-learn>=1.6.1",
    "streamlit-bokeh==3.7.1"
]